//
//  AlertUITests.swift
//  AlertUITests
//
//  Created by Harry Ng on 15/12/2015.
//  Copyright © 2015 STAY REAL. All rights reserved.
//

import XCTest

class AlertUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
        XCUIDevice.sharedDevice().orientation = .LandscapeLeft
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        let desc = "\u{201c}Alert\u{201d} Would Like to Access the Camera"
        
        let app = XCUIApplication()
        
        addUIInterruptionMonitorWithDescription(desc) { (alert) -> Bool in
            let okButton = alert.buttons["OK"]
            print(okButton.frame)
            okButton.tap()
            return true
        }
        app.buttons["Alert"].tap()
        app.buttons["Button"].tap()
    }
    
}
